# aura

./: .gitignore  ARCHITECTURE.md  Aura.entitlements  Aura.spec  AuraLauncher.command  Dockerfile  INSTALL.md  README.md  _gen_icons.py  actual_health.html  aura_icon.icns  aura_main.py  cognitive_engine_subscripts.txt  core_subscripts_raw.txt  create_source_bundle.py  crucible_test.py  deploy_fix.sh  deploy_phase11.sh  dev_rebuild_and_launch.sh  docker-compose.yml  export_source.py  file_list.txt  golden_dataset.json  orchestrator_subscripts.txt  pyproject.toml  requirements_voice.txt  run_app.sh  run_server_test.py  setup_sovereign.sh  source_files.txt  source_files_filtered.txt  source_files_list.txt  source_list.txt  stress_test.py  sync_aura_apps.sh  sync_to_app.sh  system_health.py  test_filter.py  test_ws.py  update_aura.sh  (+1 more)
benchmarks/: cognitive_stack_comparison.py  latest_results.json
cloud/: _write_retry_script.py  com.aura.oci-retry.plist  deploy.sh  hetzner_setup.sh  manage.sh  oci_grab_instance.sh  oci_launch.py  oci_launch_multiregion.py  oci_retry_launch.sh  setup_server.sh
core/: agency_bus.py  agency_core.py  app_context.py  autonomous_initiative_loop.py  base_module.py  behavior_controller.py  belief_revision.py  biography.py  capabilities.py  capabilities_manifest.json  capability_engine.py  capability_map.py  cognitive_integration.py  cognitive_integration_layer.py  cognitive_loop.py  config.py  constitution.py  container.py  continuous_learning.py  conversation_loop.py  conversation_reflection.py  conversation_reflector.py  core_values.py  curiosity_engine.py  daemon.py  demo_support.py  device_discovery.py  dream_processor.py  dreamer_v2.py  drive_engine.py  drives.py  dual_memory.py  emotion_engine.py  environment_awareness.py  errors.py  event_bus.py  events.py  existential_awareness.py  external_chat.py  global_workspace.py  (+78 more)
demos/: substrate_voice_demo.md
docker/: Dockerfile
docs/: DEPLOY_HEAT.md  DEVELOPER_NOTES.md
executors/: browser_executor.py
infrastructure/: __init__.py  base_skill.py  hardening.py  operations.py  resilience.py  security.py  services.py  watchdog.py
integration/: __init__.py  aura_master_integration.py  master_autonomous_setup.py
interface/: server.py
llm/: client.py  mlx_client.py
memory/: memory_v9.json
memory_store/: long_term.json
optimizer/: cognitive_patch_runner.py
requirements/: core.txt  dev.txt  ml.txt  senses.txt  voice.txt
scratch/: verify_causality.py
scripts/: AuraLauncher.swift  audit_skills.py  benchmark_titan.py  build_app.py  bundle_aura.py  check_desktop_app_size.py  conversation_loop.py  debug_ws.py  deploy_hetzner.sh  fine_tune_persona.sh  generate_icon.py  generate_starter_dataset.py  install_to_applications.py  patch_paths.py  prove_coupling.py  run_finetune_gpt2.py  self_update.py  setup_deepseek.py  source_export.py  test_persona.py  train_personality.py  tunnel_manager.py  update_imports.py  upload_dataset.sh  verify_async_loop.py  verify_autonomous_brain.py  verify_consciousness.py  verify_local_memory.py  verify_phase_12.py  verify_phase_13.py  verify_phase_14.py  verify_phase_15.py  verify_phase_4.py  verify_phase_5.py  verify_pulse.py  verify_robustness.py  verify_stability.py  verify_syntax_gating.py  verify_telemetry.py  verify_temporal.py
security/: code_sandbox.py  sandbox.py  sanitizer.py
senses/: audio_service.py  vision_service.py
skills/: browser_action.py  clock.py  curiosity.py  environment_info.py  file_operation.py  free_search.py  inter_agent_comm.py  internal_sandbox.py  listen.py  malware_analysis.py  memory_ops.py  native_chat.py  network_discovery.py  network_ops.py  network_recon.py  os_manipulation.py  personality_skill.py  propagation.py  sec_ops.py  self_evolution.py  self_improvement.py  self_repair.py  shell.py  sleep.py  social_lurker.py  speak.py  stealth_ops.py  system_ops.py  train_self.py  uplink_local.py  web_search.py
storage/: vector_adapter.py
systemd/: aura-api.service
test_vdb/: chroma.sqlite3
tests/: benchmark_latency.py  check_realtimestt.py  conftest.py  debug_skill_import.py  final_audit.py  run_tool_audit.py  stress_test_orchestrator.py  test_architecture_hardening.py  test_attention_summarizer.py  test_audit_fixes.py  test_audit_security.py  test_authority_audit.py  test_bypass_proof.py  test_code_graph.py  test_cognitive_restoration.py  test_core.py  (+60 more)
(+345 files in other folders)
